# test

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: week01.cpp.FC0B61DB4ED0D813.idx  week01.hpp.3E78A5A7E962304E.idx  week01.spec.cpp.755848F7F313C037.idx
src/: CMakeLists.txt  week01.cpp  week01.hpp  week02.cpp  week02.hpp
src/week01/: CMakeLists.txt  week01.hpp  week01.spec.cpp
src/week01/week01Tests/: CMakeLists.txt  week01.spec.cpp
src/week02/: week02.cpp  week02.hpp  week02.spec.cpp
src/week02/week02Tests/: CMakeLists.txt  week02.spec.cpp
src/week03/: week03.cpp  week03.hpp
src/week03/week03Tests/: CMakeLists.txt  week03.spec.cpp
